--- a/foodtruck-api/pom.xml
+++ b/foodtruck-api/pom.xml
@@ -53,6 +53,13 @@
             <artifactId>spring-webmvc</artifactId>
             <version>5.1.6.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>3.0-alpha-1</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
