--- a/gae-foodtruck-api/pom.xml
+++ b/gae-foodtruck-api/pom.xml
@@ -81,6 +81,18 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-gcp-starter-data-datastore</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>com.google.cloud</groupId>
+			<artifactId>google-cloud-storage</artifactId>
+			<version>1.73.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.auth</groupId>
+			<artifactId>google-auth-library-appengine</artifactId>
+			<version>0.15.0</version>
+		</dependency>
     </dependencies>
 
 	<dependencyManagement>
