--- a/gae-foodtruck-api/pom.xml
+++ b/gae-foodtruck-api/pom.xml
@@ -64,6 +64,12 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-gcp-starter</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>com.datastax.cassandra</groupId>
+			<artifactId>cassandra-driver-core</artifactId>
+			<version>2.1.9</version>
+		</dependency>
     </dependencies>
 
 	<dependencyManagement>
