--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/db_foodtruck
-spring.datasource.username=springadmin
-spring.datasource.password=$Foodtruck1
+spring.datasource.username=springuser
+spring.datasource.password=food@admin1
