--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/db_foodtruck
 spring.datasource.username=springuser
-spring.datasource.password=food@admin1
+spring.datasource.password=#Abc2123
