--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
-version: '3.3'
+version: '3'
+
 services:
-  db:
-    image: mysql/mysql-server:5.7
+
+  mysql-dev:
+    image: mysql:8.0.2
     restart: always 
     environment:
       MYSQL_DATABASE: 'db_foodtruck'
@@ -9,11 +11,10 @@ services:
       MYSQL_ROOT_PASSWORD: 'springUser!'
       MYSQL_PASSWORD: 'springUser!'
     ports:
-      - '3306:3306'
-    expose:
-      - '3306'
-    volumes:
-      - my-db:/var/lib/mysql
+      - '3308:3306'
 
-volumes:
-  my-db:
+  client:
+    image: mysql:8.0.2
+    depends_on:
+      - mysql-dev
+    command: mysql -uroot -ppassword -hmysql-dev db_foodtruck 
