--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,1 @@
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://${ENV_MYSQL_HOST:localhost}:3306/db_foodtruck
-spring.datasource.username=userFoodTruck
-spring.datasource.password=springUser!
-
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.h2.console.enabled=true
